--- a/template/makefile.template
+++ b/template/makefile.template
@@ -102,7 +102,7 @@ CFLAGS += -MMD -MP -MF"$(@:%.o=%.d)"
 LIBS = -lc -lm -lnosys 
 LIBDIR = 
 LDFLAGS = $(MCU) -specs=nano.specs -T$(LDSCRIPT) $(LIBDIR) $(LIBS) -Wl,-Map=$(BUILD_DIR)/$(TARGET).map,--cref -Wl,--gc-sections
-LDFLAGS += -u _printf_float -lstdc++ -Wl,--no-warn-rwx-segments
+LDFLAGS += -lstdc++ -Wl,--no-warn-rwx-segments
 # default action: build all
 all: $(BUILD_DIR)/$(TARGET).elf $(BUILD_DIR)/$(TARGET).hex $(BUILD_DIR)/$(TARGET).bin
 
