--- a/template/c_cpp_properties.json.template
+++ b/template/c_cpp_properties.json.template
@@ -10,8 +10,8 @@
                 "#cpu_define#"
             ],
             "compilerPath": "#compiler_path#",
-            "cStandard": "gnu23",
-            "cppStandard": "gnu++23",
+            "cStandard": "c23",
+            "cppStandard": "c++23",
             "intelliSenseMode": "windows-gcc-arm",
             "browse": {
                 "limitSymbolsToIncludedHeaders": true
